<resources>
    <string name="app_name">Challenge App Ilham</string>
    <string name="hai_ilham">Hai, Ilham!</string>
    <string name="mau_makan_apa_nih">Mau makan apa nih?</string>
    <string name="diskon_25">Diskon 25%</string>
    <string name="pesan_makanan_lewat_aplikasi_dan_dapatkan_diskonmu">Pesan makanan lewat aplikasi dan dapatkan diskonmu segera!</string>
    <string name="kategori">Kategori</string>
    <string name="nasi">Nasi</string>
    <string name="mie">Mie</string>
    <string name="snack">Snack</string>
    <string name="minuman">Minuman</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem10">lorem ipsum</string>
    <string name="lokasi">Lokasi</string>
    <string name="total_qty">x%s</string>
    <string name="rupiah" formatted="false">Rp. %d</string>
    <string name="add_to_cart" formatted="false">Tambah ke Keranjang - Rp. %d</string>
    <string name="counting">1</string>
    <string name="location">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="beranda">Beranda</string>
    <string name="keranjang">Keranjang</string>
    <string name="profile">Profil</string>
    <string name="username">Nama Pengguna</string>
    <string name="e_mail">E-mail</string>
    <string name="ilhamyudiatmoko483">ilhamyudiatmoko483</string>
    <string name="password">Kata Sandi</string>
    <string name="ilhamganteng123">ilhamganteng123</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_6282110654834">+6282110654834</string>
    <string name="catatan">Catatan</string>
    <string name="all">all</string>
    <string name="total_harga">Total Harga</string>
    <string name="no_data_text">Tidak Ada Data</string>
    <string name="checkout">Checkout</string>
    <string name="metode_pembayaran">Metode Pengiriman</string>
    <string name="dikirim">Dikirim</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="pesan">Pesan</string>
    <string name="form_name">Nama</string>
    <string name="form_email">Email</string>
    <string name="form_password">Kata Sandi</string>
    <string name="form_confirm_password">Konfirmasi Kata Sandi\n</string>
    <string name="text_login">Masuk</string>
    <string name="text_change_profile">Ubah Profil</string>
    <string name="text_register_here">Belum memiliki akun? Daftar</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Format email tidak valid</string>
    <string name="text_error_password_empty">Kata sandi tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Kata sandi harus memiliki 8 karakter</string>
    <string name="text_register">Daftar</string>
    <string name="text_login_here">Sudah Memiliki Akun? Masuk</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="text_password_does_not_match">Kata sandi tidak sama</string>
    <string name="text_change_password">Ubah Password</string>
    <string name="text_logout">Keluar</string>
    <string name="text_error_new_name_must_be_different">Nama baru tidak boleh sama dengan nama saat ini</string>
    <string name="text_toast">Ubah tampilan list menu</string>
    <string name="halo">Halo, %1$s!</string>
    <string name="register_failed">Daftar akun gagal: %1$s</string>
    <string name="change_profile_failed">Ubah profil gagal: %1$s</string>
    <string name="do_you_want_to_logout">"Apakah kamu ingin keluar? "</string>
    <string name="Yes">Ya</string>
    <string name="No">Tidak</string>
    <string name="change_password_request">"Permintaan ubah password akan dikirim ke email: "</string>
    <string name="added_to_cart">Dimasukkan ke keranjang</string>
    <string name="login_failed">Gagal masuk: %1$s</string>
    <string name="checkout_failed">Pesanan gagal dibuat</string>
    <string name="checkout_success">Pesanan berhasil dibuat</string>
    <string name="ok">OK</string>
</resources>